feat: 작품 패키지 수정 API + 문의의 당사자 직접 참조
패키지는 등록 시점에만 만들어지고 수정 경로가 없었다. 수정을 열려고 보니 패키지를
지우는 순간 문의가 작가를 잃어버리는 구조라, 참조부터 바로잡고 API 를 올린다.

Inquiry 는 작가를 패키지→작품→작가 3-hop 으로만 찾고 있었다. JPQL 경로 탐색은
암묵적 INNER JOIN 이라 artwork_package_id 가 NULL 이 되면 그 문의가 조회에서 통째로
빠진다 — 작가 문의함, 예약 확정 슬롯 계산, 캘린더, 탈퇴 자동취소가 전부 이 경로였다.
패키지를 지우려면 참조를 먼저 끊어야 하는데 끊는 순간 넷이 같이 무너지고,
잡혀 있던 예약 시간이 다시 열려 중복 예약이 가능해진다.

- Inquiry 에 artist(NOT NULL)·artwork(nullable) FK 추가. artist 는 어떤 경우에도
  끊지 않으므로 패키지를 교체하든 작품을 삭제하든 작가 쪽 조회가 흔들리지 않는다.
  NOT NULL 이 가능한 건 작가 탈퇴가 행을 지우지 않고 익명화하기 때문.
- 3-hop 쿼리 5개와 ChatFacade 의 getArtworkPackage().getArtwork().getArtist() 를
  직접 참조로 교체. 고객 목록 fetch join 도 두 줄에서 한 줄로 줄었다.
- detachArtworkPackage 를 둘로 분리 — detachArtwork(작품 삭제: 작품+패키지)와
  detachArtworkPackage(패키지 교체: 패키지만). 참조 해제 뒤 flush 를 명시해,
  FK 걸린 삭제가 Hibernate 내부 액션 큐 순서에 기대지 않게 했다.
- PUT /api/artworks/{artworkId}/packages 신설. 사진 교체와 같은 성격(목록 통째 교체)이라
  같은 자리에 뒀다. PATCH /{artworkId} 에 합치지 않은 건 거기 섞으면 패키지 변경 시
  lowestPrice 를 반드시 다시 계산해야 하는 불변식이 조건문 속으로 숨기 때문.
  재계산은 replacePackages 안에 넣어 패키지 교체와 떨어지지 않게 했다.
- Inquiry.finalPhotoCountSnapshot 추가. 문의 상세가 패키지명·가격·소요시간은 스냅샷으로
  보여주는데 보정본 수만 빠져 있었다. 패키지가 수정 가능해지면 이 값은 복구가 안 되므로
  문의 시점에 보존한다. 고객·작가 상세 응답에 finalPhotoCount 로 노출(필드 추가라 무해).

예약 완료 문의가 달린 작품을 삭제하면 슬롯이 풀리던 기존 버그도 함께 닫혔다.
작품 삭제 자체를 막지는 않는다(기획 판단으로 남겨둠).

fix: 작품 목록 Swagger 파라미터 전개와 손상된 커서 처리

작품 탐색을 Swagger 에서 실행하면 400(잘못된 cursor)이 났다.

- @ParameterObject 누락 — springdoc 이 @ModelAttribute DTO 를 개별 쿼리 파라미터로
  펼치지 않고 파라미터 하나짜리 JSON 객체로 그렸다. GET 인데 request body 처럼 보이고,
  안 채운 필드까지 타입 기본값을 실어 보내 cursor 에 "string" 이 들어갔다.
- 형식은 맞지만 정렬 키가 빠진 커서(예: base64 로 "{}")가 디코딩을 통과한 뒤
  createdAt.lt(null) 에서 NPE 로 터졌다. 커서는 클라이언트가 돌려보내는 값이라
  잘리거나 손댈 수 있는데 그게 500 이 되면 안 된다. ArtworkCursor.validateFor(sort) 로
  디코딩 직후 400 으로 끊는다 — 필요한 키가 정렬마다 달라 sort 를 받는다.